@@ -88,9 +88,13 @@ test.run(chdir='src',
 
 expect = \
 r"""CacheRetrieve\(aaa.out\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(bbb.out\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(ccc.out\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(all\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 """
 
 test.must_match(debug_out, expect, mode='r')
@@ -102,17 +106,25 @@ test.must_match(debug_out, expect, mode='r')
 
 expect = \
 r"""CacheRetrieve\(aaa.out\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 cat\(\["aaa.out"\], \["aaa.in"\]\)
 CachePush\(aaa.out\):  pushing to [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(bbb.out\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 cat\(\["bbb.out"\], \["bbb.in"\]\)
 CachePush\(bbb.out\):  pushing to [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(ccc.out\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 cat\(\["ccc.out"\], \["ccc.in"\]\)
 CachePush\(ccc.out\):  pushing to [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(all\):  [0-9a-fA-F]+ not in cache
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 cat\(\["all"\], \["aaa.out", "bbb.out", "ccc.out"\]\)
 CachePush\(all\):  pushing to [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 """
 
 test.run(chdir='src',
@@ -134,12 +146,16 @@ test.unlink(['src', 'cat.out'])
 expect = \
 r"""Retrieved `aaa.out' from cache
 CacheRetrieve\(aaa.out\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 Retrieved `bbb.out' from cache
 CacheRetrieve\(bbb.out\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 Retrieved `ccc.out' from cache
 CacheRetrieve\(ccc.out\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 Retrieved `all' from cache
 CacheRetrieve\(all\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 """
 
 test.run(chdir='src',
@@ -164,9 +180,13 @@ test.run(chdir='src',
 
 expect = \
 r"""CacheRetrieve\(aaa.out\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(bbb.out\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(ccc.out\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 CacheRetrieve\(all\):  retrieving from [0-9a-fA-F]+
+requests: [0-9]+, hits: [0-9]+, misses: [0-9]+, hit rate: [0-9]+\.[0-9]{2,}%
 """
 
 test.must_match(debug_out, expect, mode='r')
