@@ -67,6 +67,8 @@ RELEASE  VERSION/DATE TO BE FILLED IN LATER
     - Fix more re patterns that contain \ but not specified as raw strings
       (affects scanners for D, LaTeX, swig)
 
+  From Mathew Robinson:
+    - Update cache debug output to include cache hit rate.
 
 RELEASE 3.0.5 - Mon, 26 Mar 2019 15:04:42 -0700
 
